governor-mysql (1.2-85) stable; urgency=medium

  * MYSQLG-854: Fixed error that caused to restart db_governor

 -- Nikolay Petukhov <npetukhov@cloudlinux.com>  Fri, 06 Jan 2023 11:00:00 +0000

governor-mysql (1.2-84) stable; urgency=medium

  * MYSQLG-858: fixed wrong restrictions of users with default limits

 -- Nikolay Petukhov <npetukhov@cloudlinux.com>  Wed, 04 Jan 2023 11:00:00 +0000

governor-mysql (1.2-83.1) stable; urgency=medium

  * MYSQLG-849: Avoided killing slow queries in removing tmp table state

 -- Aleksandr Demeshko <ademeshko@cloudlinux.com>  Fri, 23 Dec 2022 14:00:00 +0000

governor-mysql (1.2-82) stable; urgency=medium

  * MYSQLG-848: moved mysqld restart to %post scriptlet

 -- Aleksandr Demeshko <ademeshko@cloudlinux.com>  Tue, 20 Dec 2022 14:00:00 +0000

governor-mysql (1.2-81) stable; urgency=medium

  * MYSQLG-843: Improper CL comercial license changed to GPL-2
  * MYSQLG-840: Adding and updating unit tests for Governor Package Limiting
  * MYSQLG-812: Implemented advanced resource consumption calculation technique

 -- Nikolay Petukhov <npetukhov@cloudlinux.com>  Thu, 15 Dec 2022 14:00:00 +0000

governor-mysql (1.2-80) stable; urgency=medium

  * MYSQLG-832: Implementation of individual limits logics in Governor Package limits
  * LU-3586: implement dbctl wrapper

 -- Sergey Kozhekin <skozhekin@cloudlinux.com>  Wed, 30 Nov 2022 14:00:00 +0000

governor-mysql (1.2-79) stable; urgency=medium

  * MYSQL-841: Removed debug message from dbupdate command output

 -- Aleksandr Demeshko <ademeshko@cloudlinux.com>  Mon, 28 Nov 2022 14:00:00 +0000

governor-mysql (1.2-78) stable; urgency=medium

  * MYSQLG-781: Kept original casting in slow query log
  * MYSQLG-800: Removed mariadb107 from supported mysql types
  * MYSQLG-788, MYSQLG-791, MYSQLG-796, MYSQLG-804, MYSQLG-806: Governor package limits enhancements
  * MYSQLG-765: Fix for config file sections absence
  * MYSQLG-816: Fix governor limits on reseller packages