@@ -453,8 +453,10 @@ fi
 %dir %attr(0700, -, -) /usr/share/lve/dbgovernor/storage
 
 %changelog
-* Fri Jan 06 2023 Nikolay Petukhov <npetukhov@cloudlinux.com> 1.2-85
+* Tue Jan 10 2023 Nikolay Petukhov <npetukhov@cloudlinux.com>, Alexandr Demeshko <ademeshko@cloudlinux.com> 1.2-85
 - MYSQLG-854: Fixed error that caused to restart db_governor
+- MYSQLG-854 Added locking for configuration file
+- Fixed install of MariaDB10.4 on CL9
 
 * Wed Jan 04 2023 Nikolay Petukhov <npetukhov@cloudlinux.com>, Alexandr Demeshko <ademeshko@cloudlinux.com> 1.2-84
 - MYSQLG-858: fixed wrong restrictions of users with default limits
