@@ -1,8 +1,10 @@
 governor-mysql (1.2-85) stable; urgency=medium
 
   * MYSQLG-854: Fixed error that caused to restart db_governor
+  * MYSQLG-854 Added locking for configuration file
+  * Fixed install of MariaDB10.4 on CL9
 
- -- Nikolay Petukhov <npetukhov@cloudlinux.com>  Fri, 06 Jan 2023 11:00:00 +0000
+ -- Nikolay Petukhov <npetukhov@cloudlinux.com>  Tue, 10 Jan 2023 08:00:00 +0000
 
 governor-mysql (1.2-84) stable; urgency=medium
 
